--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <html>
     <head>
         <title>IΛCO VIVΛCI</title>
-        <meta http-equiv="refresh" content="0; url=https://iaco.io">
+        <meta http-equiv="refresh" content="0; url=https://iago.me">
         <script type="text/javascript"> window.location.href = "https://iaco.io" </script>
     </head>
     <body>
-        If you are not redirected automatically, click this <a href="https://iaco.io">link</a>.
+        If you are not redirected automatically, click this <a href="https://iago.me">link</a>.
     </body>
 </html>
