--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <title>IΛCO VIVΛCI</title>
         <meta http-equiv="refresh" content="0; url=https://iago.me">
-        <script type="text/javascript"> window.location.href = "https://iaco.io" </script>
+        <script type="text/javascript"> window.location.href = "https://iago.me" </script>
     </head>
     <body>
         If you are not redirected automatically, click this <a href="https://iago.me">link</a>.
