--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
     <head>
-        <title>IΛCO VIVΛCI</title>
+        <title>Wait...</title>
         <meta http-equiv="refresh" content="0; url=https://iago.me">
         <script type="text/javascript"> window.location.href = "https://iago.me" </script>
     </head>
